fix: 去掉商品列表 overflow-x: hidden

--- a/src/assets/pages/productpage/_product.scss
+++ b/src/assets/pages/productpage/_product.scss
@@ -145,7 +145,7 @@
 }
 
 .product-catalog-page {
-  overflow-x: hidden;
+  // overflow-x: hidden;
   padding-top: 0;
 
   .category-image-wrapper,
